<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tour &amp; Travel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nearest_locatioin">Map</string>
    <string name="park">parks</string>
    <string name="catagories">Categories</string>
    <string name="title_activity_museam">museam</string>
    <string-array name="museams_list">
        <item> Army Museum </item>
        <item> National Museum </item>
        <item> Air Force Museum </item>
        <item> Money Museum </item>
        <item> Liberation War Museum of Bangladesh Police </item>
    </string-array>
    <string-array name="beach_list">
        <item> Coxs Bazar Beach </item>
        <item> St. Martins Island </item>
        <item> Patenga sea beach </item>
        <item> kuakata </item>
        <item> Nijhum Dip </item>
    </string-array>
    <string-array name="waterfall_list">
        <item> Hum Hum </item>
        <item> Jadipai waterfall </item>
        <item> Khoiyachora Waterfall </item>
        <item> Madhabkunda waterfall </item>
        <item> Nafa-khum </item>
    </string-array>
    <string-array name="heritage_list">
        <item> Lalbag Fort </item>
        <item> Jatiyo Smriti Soudho </item>
        <item> Sonargaon </item>
        <item> Ahsan Manzil </item>
        <item> Shat Gombuj Masjid </item>
        <item> The Sundarbans </item>
        <item> Paharpur Buddha Bihar </item>
        <item> MahasthanGarh </item>
        <item> Natore Rajbari </item>

    </string-array>
    <string-array name="hills_list">
        <item> Keokradong </item>
        <item> Sajek Valley </item>
        <item> Tazing Dong </item>
        <item> Foys Lake </item>
        <item> Chimbuk Hill </item>

    </string-array>
    <string-array name="division_name">
        <item> Dhaka </item>
        <item> Rajshahi </item>
        <item> Rangpur </item>
        <item> Khulna </item>
        <item> Chattagram </item>
        <item> Barishal </item>
        <item> Sylhet </item>
        <item> Mymensingh </item>
    </string-array>
    <string name="title_activity_museams">museams</string>
    <string name="title_activity_army_museum">Army Museum</string>
    <string name="tajhat">
        "Tajhat Palace:\n\n"
        "Few of the attractions in Bangladesh are as stately, large and beautiful as the Tajhat Zamindar Palace. This historical palace was built near the beginning of the 20th century. It is situated roughly three kilometers south east of Rangpur’s city center and currently serves as a museum for the public.\n"
        "The front of this impressive edifice is about 76 meters long and two stories high. A ribbed conical dome supported by a tall octagonal neck is located in the center of the roof and crowns the palace.\n\n"
        "How to go: \n"
        "You can take a rickshaw or auto rickshaw (Battery Driven Rickshaw) to visit this place from Rangpur.\n"
    </string>
    <string name="vinnojogot">
        "Vinno jogot brings lots of fun to northwest of Bangladesh.It is one of the most spectacular (kind of theme) parks in the country and has become a great tourist attraction in Rangpur. It is about 100 acres acres.Vinno Jogot beautify by many rides. This place take you a daydream world.\n"
        "Vinnya jagat provides you the facilities of a 3 star hotel/resort Dream Place in a fantastic location surrounded by water pools and a mosque by its side. Vinnya jagat offers hotel packages to visitors. Visitors with their near and dear ones can stay and enjoy nights in vinnya jagat.\n"
        "here entry fee 30 Taka, per Ride 380 Taka. \n "
    </string>
    <string name="haripur">"Haripur Barabari (হরিপুর রাজবাড়ি)"</string>
    <string name="haripur_text">
        "Haripur Barabari, is a palace in Horipur Union of Nasirnagar Upazila at Brahmanbaria district, Bangladesh earlier known as East Bengal. This palace founded by Jamindar Krishna Prasad Roy Choudhury in eighteenth century.\n"
    </string>
    <string name="kal_vairab">"Kal Bhairab Temple (কালভৈরব মন্দির)"</string>
    <string name="kal_text">
        "Kal Bhairab Temple (Bengali: কালভৈরব মন্দির) is a Hindu temple, dedicated to the God Shiva, located in Medda in the Brahmanbaria district of Bangladesh. The temple dates back to the 19th century. It is said that approximately 200 years ago a sculptor named Durgacharan Acharjee saw a dream which motivated and influenced him to make preparations to build the statue from soil. Noor Muhammad, the famous landlord of Sarail donated the land to build this temple.\n"
    </string>
    <string name="arifil">"Arifile Mosque"</string>
    <string name="arifil_text">
        "Arifile Mosque is in Sarail Upazila at Brahmanbaria District, Bangladesh, founded by Shah Arif in 1662. Name derived from Arif to Arifile. Locally known as Arail Mosque. This is an example of Mughal architecture, which combined Bengali, Persian and Islamic influences.\n"
        "Address: Arifile Mosque is located 15km from Brahmanbaria District and 0.5km northwest from Sarail Upazila.\n"
    </string>
    <string name="Shalban">"Shalban Vihara"</string>
    <string name="shalban_text">
        "Shalban vihara is an archaeological site in Mainamati, Cumilla, Bangladesh. The ruins are in the middle of the Lalmai hills ridge, and these are of a 7th-century Paharpur-style Buddhist viharas with about 100 cells for monks. It operated through the 12th century.\n"
        "Address: Comilla University Road, 24no Word Comilla City Corporation, Shalmanpur , comilla \n"
    </string>
    <string name="maynamati">
        "Many archaeological elements were found in Shalban Bhihar. Most of them are kept in the Mainamati Museum now.The special attraction here is a dominant central shrine and its monumental gate way on the north. In its central shrine has revealed six building and rebuilding phases while in the monastery four. The terracotta in sealing indicates that the monastery was built by Sri Bhava Deva, the 4th ruler of the early deva dynasty during mid-8th century. Previously it was called Bhava Deva MahaVihara. The antiquities recovered during excavation are now displayed in the Maynamati Museum.\n"
    </string>
    <string name="maynamati_war">
        "The Mainamati War Cemetery is a war cemetery and a memorial in Comilla, Bangladesh, for Second World War graves from nearby areas during the Second World War. The cemetery contains 736 Commonwealth burials of the Second World War.\n"
        "Address: Comilla-Sylhet Road. \n"
    </string>
    <string name="comilla_temple">
        "Comilla Jagannath Temple, also known as Sateroratna Mandir or seventeen-jewel temple, is located in Comilla, Bangladesh. It is dedicated to the Hindu God Jagannath. It dates back to the 16th century, and was built by Sree Sreejoktou Moharaja Rada Kishor Manikuo Bahadur, who was the king of Tripura.\n"
    </string>
    <string name="comilla_jag">"Comilla Jagannath Temple"</string>
    <string name="waterpark">
        "Address: Blue Water Park Rd, Shalmanpur, comilla \n"
    </string>
    <string name="comilla_zoo">
        "Comilla Zoo and Botanical Garden is a Zoo and Botanical Garden in Comilla, Bangladesh. With an area of 10.15 acres of land it is located at Kaliajhuri area of the Comilla District.\n"
        "Address: Shaheed Shamsul Haque Sarak, Comilla \n"
    </string>
    <string name="kingdom">
        "Address: Comilla\n"
        "Phone: 01913-899083 \n"
    </string>
    <string name="rupban">
        "Locally this site is known as “Rupban Mura”. After excavation, the sign of a shrine, a monastery and an octagonal votive stupa were found. Among the antiquities, one Gupta imitation gold coin, 04 coins of debased metal, 3 silver coins and a bulky sand stone, Buddha image of post gupta period are mention worthy. On the basis of all the evidences found here, the original monastery and shrine may be dated prior to the 8th Century A.D.\n"
        "Address: Kotbari, Comilla, Bangladesh \n"
    </string>
    <string name="alutia">"Alutila Mysterious Cave"</string>
    <string name="alutia_text">
        "Alutila Hill is 150 meter long and very beautiful attractive tourist place of Bangladesh. It is surrounded by deep green forest. Approximately 100 meters long a very dark Cave is the mysterious beauty of Alutila hill. If you are courageous and adventure lover, then this is a perfect spot to vanquish. There is no risk, nothing to warry, it is absolutely safe cave. It will take 15 minutes to pass the cave.\n"
        "How to go: First you have to go Khagrachari.You can find many bus service from Dhaka to Khagrachari available. From khagrachari you can can hire micro bus or even local bus are available to reach there at any time of the day.\n"
    </string>
    <string name="richang">"Richhang waterfall"</string>
    <string name="richang_text">
        "Khagrachari – Chittagong road the area of Hridoy member. 7 km shout from the Porjoton motel. 2 km shout from Alutila, 1.50 km from east from the main road. Local bus or Chader gari until Hridoy Member area. Rest 1.50 km by foot.\n"
        "How to go: There are lots of public bus used to leave from the bus terminal for Chittagong and Feni. You can take any one of those.Beside the highway,a signboard which says where is the waterfall. From the highway, its 2.1 kilometer walking distance.\n"
    </string>
    <string name="nonchori">"Nunchhori Debota Pond"</string>
    <string name="nonchori_text">
        "Nunchhori Debota Pond (Matai Pukhiri/Goddess Pond) is a remarkable lake known as the Matai Pukhiri, 500 meters above ground level at Nunchhari in Khagrachhari District. According to a legend of the Tripura tribe, the water of this lake never dries up nor becomes dirty, which is why it is called Matai Pukhiri or the Lake of God.\n"
        "How to go: The Nunchhori Tripura Village is 13 km south from Porjoton motel, 4 km west from Maichchari Army camp of Khagrachari – Rangamati road. Local bus or chadergari of Khagrachari – Rangamati Route go till Maichchori Army camp. You have to go rest 4–5 km on foot. \n"
    </string>
    <string name="haji">"Haziganj Boro Masjid"</string>
    <string name="haji_text">
        "The mosque was built in 1373 during the rule of Bengal sultan Fakhruddin Mubarak Shah. This mosque is probably the oldest mosque in Comilla district. It is located in Pirojpur village, a little north of Hajiganj sub district. \n"
        "Location: Beside Chandpur-Comilla Road, Hajiganj, Chandpur.\n"
    </string>
    <string name="rupsha">"Rupsa Zamindar Bari"</string>
    <string name="rupsha_tex">
        "Rupsa Zamindar Bari is located at Faridganj, Chandpur. \n"
    </string>
    <string name="alamgiri">"Walipur Alamgiri Mosque"</string>
    <string name="alamgir_tex">
        "Walipur Alamgiri Mosque is situated in Walipur village under Hajiganj Upazila of Chandpur district. There are two mosques in the same locality – one known as Shahi Alamgiri Mosque and the other as Shah Shuja Mosque.  A Persian inscription in fine nastaliq character, fixed over the central doorway, records the construction of the mosque by one Abdullah in 1692 AD in the reign of Alamgir Aurangzeb.\n"
        "Location: After reaching at Chandpur, take local buses to reach Haziganj Pourashava, and take rickshaw to reach that mosque.\n"
    </string>
    <string name="nilkuthi">
        "Neelkuthi is located at Sahebganj, Faridganj, Chandpur.\n\n"
    </string>
</resources>