<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".khagrachari">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/alutia"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="229dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/alutila" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alutia_text"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/richang"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="274dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/richang" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/richang_text"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/nonchori"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/nonchori" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nonchori_text"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
    </LinearLayout>
</ScrollView>