<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".brahmanbaria">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/haripur"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/haripur" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/haripur_text"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />

        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/kal_vairab"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="299dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/kal_vairab" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kal_text"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/arifil"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="299dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/arifile" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arifil_text"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
    </LinearLayout>

</ScrollView>