<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".chandpur">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/alamgiri"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="201dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/alamgiri" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamgir_tex"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/rupsha"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/rupsha" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rupsha_tex"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/alamgiri"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/alamgiri" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamgir_tex"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/haji"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/hajiganj" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/haji_text"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Neelkuthi"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="271dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/nilkuthi" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nilkuthi"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
    </LinearLayout>
</ScrollView>