<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".comilla">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/Shalban"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/shalban" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shalban_text"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Maynamati Museum"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="199dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/maynamati" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maynamati"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Maynamati War Cemetery"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="267dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/maynamti_war" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maynamati_war"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/comilla_jag"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/jagannath" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comilla_temple"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Comilla Blue WaterPark"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/waterpark" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waterpark"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Comilla Zoo and Botanical Garden"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="277dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/comilla_zoo" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comilla_zoo"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Comilla Kingdom Park"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/comilla_kingdom" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kingdom"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Rupban Mura"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/rupban_mura" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rupban"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            />
    </LinearLayout>
</ScrollView>